--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "cwd": "${workspaceRoot}",
             "program": "${workspaceRoot}/new_project.rb",
             "args": [
-                "/Users/tl/Desktop/ModuleTEST",
+                "/Users/ltl/Desktop/TEST",
                 "Login",
                 "HET"
             ]
